# Systemes_avances

./: .gitignore  README.md
Ressources/base_project_struct/src/: skeleton.c
TP1/: CMakeLists.txt
TP1/src/: exo1.c  exo2.c  exo3.c
TP2/: CMakeLists.txt
TP2/src/: affiche.torename_c  exo1.c  exo2.c  exo3.c
TP3/: CMakeLists.txt  Makefile
TP3/src/: exo1.c
TP4/: dockerfile  exo1.md  exo2.md
minishell/: Makefile  README.md
minishell/doc/: doxygen.conf  minishell.1
minishell/include/: aliases.h  batch.h  executor.h  history.h  internal_commands.h  parser.h  typedef.h
minishell/logs/: command_history
minishell/src/: aliases.c  batch.c  executor.c  history.c  internal_commands.c  main.c  parser.c
